--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "author": "Christoph Gysin <christoph.gysin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
+    "@types/chai": "^4.2.0",
+    "@types/uuid": "^3.4.5",
     "serverless-offline-dynamodb-streams": "^2.0.0",
-    "uuid": "^2.0.3"
+    "tslib": "^1.10.0",
+    "typescript": "^3.5.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.12.0",
     "serverless-dynamodb-local": "^0.2.18",
-    "serverless-offline": "^3.8.3"
+    "serverless-offline": "^3.8.3",
+    "serverless-plugin-typescript": "^1.1.9"
   }
 }
