--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "repository": "",
   "author": "Christoph Gysin <christoph.gysin@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "mocha -r ts-node/register test/*.ts"
+  },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
-    "@types/chai": "^4.2.0",
     "@types/uuid": "^3.4.5",
     "serverless-offline-dynamodb-streams": "^2.0.0",
+    "serverless-offline-request": "^1.0.0",
     "tslib": "^1.10.0",
     "typescript": "^3.5.3",
     "uuid": "^3.3.3"
@@ -18,6 +21,7 @@
     "aws-sdk": "^2.12.0",
     "serverless-dynamodb-local": "^0.2.18",
     "serverless-offline": "^3.8.3",
-    "serverless-plugin-typescript": "^1.1.9"
+    "serverless-plugin-typescript": "^1.1.9",
+    "ts-node": "^8.3.0"
   }
 }
