--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,7 @@ plugins:
   - serverless-plugin-typescript
   - serverless-offline
 
-custom:
+custom: 
   dynamodb:
     start:
       port: 8000
@@ -18,18 +18,13 @@ custom:
       dir: offline/migrations
     stages:
       - dev
-  serverless-offline-dynamodb-streams:
-    apiVersion: '2013-12-02'
-    endpoint: http://0.0.0.0:8000
-    region: eu-west-1
-    accessKeyId: root
-    secretAccessKey: root
-    skipCacheInvalidation: false
-    readInterval: 500
+      - prod
+  serverless-offline-dynamodb-streams: ${file(config/${opt:stage}-env.json)}
 
 provider:
   name: aws
   runtime: nodejs10.16.2
+  stage: ${opt:stage, 'dev'}
   environment:
     DYNAMODB_TABLE: "tbl-tasks"
   iamRoleStatements:
@@ -48,7 +43,6 @@ provider:
       Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
 functions:
   create:
-    #handler: tasks/create.create
     handler: handler.create
     events:
       - http:
@@ -56,14 +50,13 @@ functions:
           method: post
           cors: true
 
-  # list:
-  #   #handler: tasks/list.list
-  #   handler: handler.list
-  #   events:
-  #     - http:
-  #         path: tasks
-  #         method: get
-  #         cors: true
+  list:
+    handler: handler.list
+    events:
+      - http:
+          path: tasks
+          method: get
+          cors: true
 
   triggerStream:
     handler: handler.triggerStream
